--- a/completed.html
+++ b/completed.html
@@ -4,7 +4,7 @@
 </head>
 <body>
 
-<img src="https://www.facebook.com/tr?id=PIXEL_ID&noscript=1&ev=Purchase" />
+<img src="https://www.facebook.com/tr?id=206135884126022&noscript=1&ev=Purchase" />
 
 </body>
 </html>
